--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MigClim
-Version: 1.3
-Date: 2012-11-11
+Version: 1.4
+Date: 2013-04-03
 Title: Implementing dispersal into species distribution models
 Author: Robin Engler <robin.engler@gmail.com> and Wim Hordijk
         <wim@WorldWideWanderings.net> and Loic Pellissier
@@ -11,6 +11,7 @@ Description: Functions for implementing species dispersal into
         projections of species distribution models (e.g. under climate
         change scenarios).
 License: GPL
-Packaged: 2012-11-11 15:07:37 UTC; robin
+Packaged: 2013-04-04 17:26:36 UTC; robin
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-11-21 12:11:07
+Date/Publication: 2013-04-04 21:12:17
